@@ -12,6 +12,8 @@ What's New in Python 3.2 Alpha 2?
 Core and Builtins
 -----------------
 
+- Issue #9688: __basicsize__ and __itemsize__ must be accessed as Py_ssize_t.
+
 - Issue #9684: Added a definition for SIZEOF_WCHAR_T to PC/pyconfig.h,
   to match the pyconfig.h generated by configure on other systems.
 
